# iroha-ametsuchi

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  circle.yml  dependencies.cmake  functions.cmake  main.cpp
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
benchmark/: CMakeLists.txt
benchmark/ametsuchi/: cache_benchmark.cc  file_benchmark.cc  serialize_benchmark.cc  tx_store_iterator_benchmark.cc
client/: CMakeLists.txt
client/include/ametsuchi/: ametsuchi.h  client.h
client/src/ametsuchi/: client.cc
cmake/: DownloadProject.cmake  dependencies.cmake  functions.cmake
cmake/Modules/: FindCPP_redis.cmake  FindCPPfs.cmake  FindFlatbuffers.cmake  FindGRPC.cmake  FindKeccak.cmake  FindLMDB.cmake  FindLibSSH2.cmake  FindOptional.cmake  FindSPDlog.cmake  Findflatbuffers.cmake
docker/dev/: Dockerfile
docs/: Doxyfile.in  design.md
include/: ametsuchi.h
include/ametsuchi/: Greeter.h  ametsuchi.h  ametsuchi.hpp  api_generated.h  buffer.h  buffer.inc  cache.h  cache.inc  circular_buffer.h  circular_buffer.inc  common.h  comparator.h  currency.h  db.h  env.h  exception.h  globals.h  serializer.h  status.h  table.h  tx_store.h  wsv.h
include/ametsuchi/block_index/: block_index.h  block_index_redis.h
include/ametsuchi/file/: file.h  (+4 more)
include/blockstore/: blockstore.h  blockstore_nudb.h  tx_redis.h
include/tx_store/: tx_redis.h  tx_store.h
include/wsv/: wsv.h  wsv_redis.h
patches/: flatbuffers-Remove-libc-and-c-abi-requirement-on-Linux-with-clan.patch
schema/: CMakeLists.txt  account.fbs  action.proto  api.fbs  asset.fbs  block.fbs  block.proto  block_generated.h  command.proto  commands.fbs  drop.sql  endpoint.fbs  init.sql  main.fbs  metadata.fbs  primitives.fbs  query.proto  storage.proto  transaction.fbs  tx_store.fbs
scripts/: docker-compose-test.yml  run.sh
server/: CMakeLists.txt  main.cc
server/block_index/: block_index.h  block_index_redis.cc  block_index_redis.h
server/block_store/: CMakeLists.txt  block_store.h  block_store_flat.cc  block_store_flat.h  flat_iterator.cc  flat_iterator.h
server/crash_handler/: CMakeLists.txt  block_index_mediator.cc  tx_index_mediator.h
server/service/: CMakeLists.txt  command_service.cc  command_service.h  query_service.cc  query_service.h  storage_service.cc  storage_service.h
server/tx_index/: CMakeLists.txt  tx_index.h  tx_index_redis.cc  tx_index_redis.h
server/utils/: CMakeLists.txt  action_parser.h  block_parser.cc  block_parser.h  block_parser_flatbuffers.cc  block_parser_flatbuffers.h  block_parser_protobuf.cc  block_parser_protobuf.h  hash.cc  hash.h  transcation_parser.cc
server/wsv/: CMakeLists.txt  drop.sql  init.sql  manager.h  manager_imp.cc  wsv.h  wsv_postgres.cc  wsv_postgres.h  wsv_redis.cc  wsv_redis.h
src/: CMakeLists.txt  ametsuchi.cc  ametsuchi.h  main.cc
src/ametsuchi/: Greeter.cc  ametsuchi.cc  command.cc  common.cc  currency.cc  db.cc  env.cc  tx_store.cc  wsv.cc
src/block_index/: CMakeLists.txt  block_index.h  block_index_redis.cc  block_index_redis.h
src/block_store/: CMakeLists.txt  block_store.h  block_store.hpp  block_store_flat.cc  flat_iterator.h
src/blockstore/: blockstore_nudb.cc
src/crash_handler/: CMakeLists.txt  block_index_mediator.cc  block_index_mediator.h  tx_index_mediator.cc
src/impl/: CMakeLists.txt  ametsuchi.cpp  ametsuchi.hpp
src/index/: CMakeLists.txt  index.hpp
src/tx_index/: CMakeLists.txt  tx_index.h  tx_index_redis.cc  tx_index_redis.h
src/tx_store/: tx_redis.cc
src/utils/: CMakeLists.txt  action_parser.cc  block_parser_protobuf.h  hash.h  transaction_parser.h
src/wsv/: CMakeLists.txt  factory.h  manager_imp.h  wsv.h  wsv.hpp  wsv_postgres.cc  wsv_redis.cc
test/: CMakeLists.txt  ametsuchi_test.cpp  common.hpp  main.cc  postgres_test.cc
test/ametsuchi/: ametsuchi.cc  ametsuchi_test.cc  buffer_iter_test.cc  buffer_test.cc  cache_test.cc  circular_buffer_iter_test.cc  circular_buffer_test.cc  comparator_test.cc  db_test.cc  merkle_test.cc  serialize_test.cc  wsv_test.cc
test/ametsuchi/block_index/: block_index_test.cc
test/ametsuchi/block_store/: block_store_flat_test.cc  block_store_nudb_test.cc
test/ametsuchi/file/: file_test.cc  rw_file_safe_test.cc
test/ametsuchi/index/: btree_index_test.cc  merkle_test.cc
test/ametsuchi/io/: filevfs_test.cc  io_testing_lib.h
test/ametsuchi/merkle_tree/: merkle_tree_test.cc
test/ametsuchi/pager/: cache_test.cc
test/ametsuchi/table/: field_table_test.cc  fixed_table_iter_test.cc  fixed_table_test.cc  lib.h  table_test.cc
test/ametsuchi/tx_index/: tx_index_test.cc
test/ametsuchi/tx_store/: tx_redis_test.cc  tx_store_iterator_test.cc  tx_store_recovery_test.cc  tx_store_test.cc
test/ametsuchi/utils/: block_parser_flatbuffers_test.cc  block_parser_protobuf_test.cc  parser_test.cc
test/ametsuchi/wsv/: wsv_postgres_test.cc  wsv_redis_test.cc
test/block_index/: block_index_test.cc
test/block_store/: block_store_flat_test.cc  block_store_flat_test.cpp  flat_iterators_test.cc
test/client/: CMakeLists.txt  integration_test.cc  sample_app_test.cc
test/crash_handler/: block_index_mediator_test.cc
test/generator/: tx_generator.h  tx_generator_test.cc
test/index/: block_index_test.cc  tx_index_test.cpp
test/integration/: CMakeLists.txt  integration_test.cc
test/module/: keccak_test.cc  lmdb_test.cc  sqlite_test.cc
test/server/: CMakeLists.txt
test/server/block_index/: block_index_test.cc
test/server/block_store/: block_store_flat_test.cc  flat_iterators_test.cc
test/server/crash_handler/: block_index_mediator_test.cc
test/server/service/: sample_client_test.cc
test/server/tx_index/: tx_index_test.cc
test/server/utils/: block_parser_flatbuffers_test.cc  block_parser_protobuf_test.cc  hash_test.cc  parser_test.cc
test/server/wsv/: wsv_postgres_test.cc  wsv_redis_test.cc  wsv_test.cc
test/tx_index/: tx_index_test.cc
test/tx_store/: nudb_test.cc  tx_redis_test.cc
test/utils/: block_parser_protobuf_test.cc
test/wsv/: wsv_redis_test.cc  wsv_test.cc
(+80 files in other folders)
